[B]2.5.9.001[/B] Mod Changes by TheHighway
- VideoOSD.xml:  Added Play Button for SendTo Axel.
- VideoOSD.xml:  Added Record Button for Dreamcatcher.
- 25 shortcut icons for videos submenu.
- 10 shortcut icons for submenus of pictures, music, and programs.
- 720p grid included for debugging.

[B]2.5.9[/B]

- Updated language files from Transifex

[B]2.5.8[/B]

- Updated language files from Transifex

[B]2.5.7[/B]

- Updated language files from Transifex

[B]2.5.6[/B]

- Updated language files from Transifex

[B]2.5.5[/B]

- Updated language files from Transifex

[B]2.5.4[/B]

- Updated language files from Transifex

[B]2.5.3[/B]

- Updated language files from Transifex

[B]2.5.2[/B]

- Updated language files from Transifex

[B]2.5.0[/B]
- Kodi name change

[B]2.4.0[/B]
- Set minimum GUI version to 5.2.0
- Rewrite of the PVR section 

[B]2.2.14[/B]

- Updated language files from Transifex

[B]2.2.13[/B]

- Updated language files from Transifex

[B]2.2.12[/B]

- Updated language files from Transifex

[B]2.2.11[/B]

- Updated language files from Transifex

[B]2.2.10[/B]

- Updated language files from Transifex

[B]2.2.9[/B]

- Updated language files from Transifex

[B]2.2.8[/B]

- Updated language files from Transifex

[B]2.2.7[/B]

- Updated language files from Transifex

[B]2.2.6[/B]

- Updated language files from Transifex

[B]2.2.5[/B]

- Updated language files from Transifex

[B]2.2.4[/B]

- Updated language files from Transifex

[B]2.2.3[/B]

- Updated language files from Transifex

[B]2.2.2[/B]

- Updated language files from Transifex

[B]2.2.1[/B]

- Updated language files from Transifex

[B]2.2.0[/B]
- Set minimum GUI version to 5.0.0
- Adjusted to Gotham code changes

[B]2.1.7[/B]

- Updated language files from Transifex

[B]2.1.6[/B]

- Updated language files from Transifex

[B]2.1.5[/B]

- Updated language files from Transifex

[B]2.1.4[/B]

- Updated language files from Transifex

[B]2.1.3[/B]

- Updated language files from Transifex

[B]2.1.2[/B]
