@@ -1051,10 +1051,10 @@
 			<include>Window_OpenClose_Animation</include>
 			<control type="rss">
 				<description>RSS feed</description>
-				<left>100</left>
+				<left>250</left>
 				<top>0</top>
 				<height>30</height>
-				<width>1145</width>
+				<width>995</width>
 				<font>font12</font>
 				<urlset>1</urlset>
 				<textcolor>blue</textcolor>
@@ -1071,12 +1071,12 @@
 			</control>
 		</control>
 		<control type="group" id="10">
-			<left>20</left>
-			<top>55r</top>
+			<left>5</left>
+			<top>47r</top>
 			<include>Window_OpenClose_Animation</include>
 			<control type="button" id="20">
 				<description>Power push button</description>
-				<left>55</left>
+				<left>50</left>
 				<top>0</top>
 				<width>45</width>
 				<height>45</height>
@@ -1086,13 +1086,13 @@
 				<texturefocus border="5">floor_buttonFO.png</texturefocus>
 				<texturenofocus border="5">floor_button.png</texturenofocus>
 				<onleft>21</onleft>
-				<onright>21</onright>
+				<onright>22</onright>
 				<onup>9002</onup>
 				<ondown>9003</ondown>
 			</control>
 			<control type="image">
 				<description>Power Icon</description>
-				<left>60</left>
+				<left>55</left>
 				<top>5</top>
 				<width>35</width>
 				<height>35</height>
@@ -1110,7 +1110,7 @@
 				<onclick>ActivateWindow(Favourites)</onclick>
 				<texturefocus border="5">floor_buttonFO.png</texturefocus>
 				<texturenofocus border="5">floor_button.png</texturenofocus>
-				<onleft>20</onleft>
+				<onleft>24</onleft>
 				<onright>20</onright>
 				<onup>9002</onup>
 				<ondown>9003</ondown>
@@ -1126,7 +1126,7 @@
 			</control>
 			<control type="button" id="22">
 				<description>ReloadSkin push button</description>
-				<posx>110</posx>
+				<posx>100</posx>
 				<posy>0</posy>
 				<width>45</width>
 				<height>45</height>
@@ -1137,19 +1137,73 @@
 				<texturefocus border="5">floor_buttonFO.png</texturefocus>
 				<texturenofocus border="5">floor_button.png</texturenofocus>
 				<onleft>20</onleft>
-				<onright>21</onright>
+				<onright>23</onright>
 				<onup condition="System.HasAddon(script.globalsearch)">608</onup>
 				<onup condition="!System.HasAddon(script.globalsearch)">603</onup>
 				<ondown>9003</ondown>
 			</control>
 			<control type="image">
 				<description>ReloadSkin Icon</description>
-				<posx>115</posx>
+				<posx>105</posx>
 				<posy>5</posy>
 				<width>35</width>
 				<height>35</height>
 				<aspectratio>keep</aspectratio>
 				<texture>OSDRepeatFO.png</texture>
+			</control>
+			<control type="button" id="23">
+				<description>Debug Grid Layer push button</description>
+				<posx>150</posx>
+				<posy>0</posy>
+				<width>45</width>
+				<height>45</height>
+				<label>31003</label>
+				<font>-</font>
+				<aligny>-</aligny>
+				<onclick>Skin.ToggleSetting(DebugGrid)</onclick>
+				<texturefocus border="5">floor_buttonFO.png</texturefocus>
+				<texturenofocus border="5">floor_button.png</texturenofocus>
+				<onleft>22</onleft>
+				<onright>24</onright>
+				<onup condition="System.HasAddon(script.globalsearch)">608</onup>
+				<onup condition="!System.HasAddon(script.globalsearch)">603</onup>
+				<ondown>9003</ondown>
+			</control>
+			<control type="image">
+				<description>Debug Grid Layer Icon</description>
+				<posx>155</posx>
+				<posy>5</posy>
+				<width>35</width>
+				<height>35</height>
+				<aspectratio>keep</aspectratio>
+				<texture>OSDStopNF.png</texture>
+			</control>
+			<control type="button" id="24">
+				<description>Layer Info Text push button</description>
+				<posx>200</posx>
+				<posy>0</posy>
+				<width>45</width>
+				<height>45</height>
+				<label>31003</label>
+				<font>-</font>
+				<aligny>-</aligny>
+				<onclick>Skin.ToggleSetting(HideDebugInfo)</onclick>
+				<texturefocus border="5">floor_buttonFO.png</texturefocus>
+				<texturenofocus border="5">floor_button.png</texturenofocus>
+				<onleft>23</onleft>
+				<onright>21</onright>
+				<onup condition="System.HasAddon(script.globalsearch)">608</onup>
+				<onup condition="!System.HasAddon(script.globalsearch)">603</onup>
+				<ondown>9003</ondown>
+			</control>
+			<control type="image">
+				<description>Layer Info Text Icon</description>
+				<posx>205</posx>
+				<posy>5</posy>
+				<width>35</width>
+				<height>35</height>
+				<aspectratio>keep</aspectratio>
+				<texture>OSDSubtitlesNF.png</texture>
 			</control>
 		</control>
 		<control type="group">
